# ot-harjoitustyo

./: .gitignore  README.md
budget-manager/: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
budget-manager/src/: index.py  ui.py
budget-manager/src/entities/: Budget.py  Transaction.py  User.py
budget-manager/src/repositories/: AuthRepository.py  BudgetRepository.py  UserRepository.py  auth_repository.py
budget-manager/src/tests/: auth_repository_test.py  budget_repository_test.py  budget_test.py  transaction_test.py  user_repository_test.py  user_test.py
budget-manager/src/utils/: connect_database.py  database.sqlite  initialize_database.py  initialize_test_database.py
budget-manager/src/views/: BudgetSummaryView.py  BudgetsView.py  LoginView.py  RegisterView.py
dokumentaatio/: ARKKITEHTUURI.md  CHANGELOG.md  KAYTTOOHJE.md  TESTAUS.md  TUNTIKIRJANPITO.md  VAATIMUSMAARITTELY.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
