[tool.poetry]
name = "budget-manager"
version = "0.1.0"
description = "Budget management application for school"
authors = ["LeeviHalme <29179759+LeeviHalme@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
